added social events page

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -67,15 +67,18 @@
                                         <a routerLink="/mitzvah-events">Mitzvah Committee Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/recent-events">Recent Events</a>
+                                        <a routerLink="/social-events">Social Events</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/brotherhood-night-history">Brotherhood Night: A History</a>
+                                        <a routerLink="/recent-events">Recent Events</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
+                                    <li class="usa-nav__submenu-item">
+                                        <a routerLink="/brotherhood-night-history">Brotherhood Night: A History</a>
+                                    </li>
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/about-us">About Us</a>
                                     </li>
@@ -159,6 +162,9 @@
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/mitzvah-events" class="usa-nav__link">Mitzvah Cmte. Events</a>
+                </li>
+                <li class="usa-nav__primary-item">
+                    <a routerLink="/social-events" class="usa-nav__link">Social Events</a>
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/recent-events" class="usa-nav__link">Recent Events</a>
